third_party/rust/paste/tests/ui/unexpected-group.stderr
error: unexpected token
 --> tests/ui/unexpected-group.rs:4:12
  |
4 |     fn [<a {} b>]() {}
  |            ^^
